added pug views and reshuffled routes to avoid incorrect routing by express

--- a/views/partials/footer.pug
+++ b/views/partials/footer.pug
@@ -1,5 +1,4 @@
 footer.footer
     .footer_icon
-        a(href="#toTop", class="fa fa-camera-retro", aria-hidden="true")
+        a(href="#toTop", class="fa fa-eye", aria-hidden="true")
     span.footer_text NewTube &copy; #{new Date().getFullYear()} 
-    
