--- a/views/editProfile.pug
+++ b/views/editProfile.pug
@@ -1,4 +1,11 @@
 extends layouts/main.pug
 
 block content
-    p Edit Profile
+    .form-container
+        form(action=routes.editProfile, method="post")
+            label(for="avatar") Avatar
+            input(type="file", id="avatar", name="avatar")
+            input(type="text", id="name", name="name", placeholder="name")
+            input(type="text", id="email", name="email", placeholder="email")
+            input(type="submit", value="Update profile")
+        a.form-container__link(href=routes.changePassword) Change Password
