--- a/views/home.pug
+++ b/views/home.pug
@@ -1,5 +1,7 @@
 extends layouts/main.pug
 
 block content
-    p Hello!!
-    p That is a Home Page
+    .videos
+        each video in videos
+            h1= video.title
+            h2= video.description
