--- a/views/layouts/main.pug
+++ b/views/layouts/main.pug
@@ -2,10 +2,10 @@ doctype html
 html
     head
     link(href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css", rel="stylesheet", integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN", crossorigin="anonymous")    
-    title NewTube
+    title #{pageTitle} | #{siteName}
     body
         include ../partials/header 
-            h1 New Tube
+            h1 NewTube
         main
             block content
         include ../partials/footer
