--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -1,9 +1,13 @@
 header.header
     .header__column
-        i.fa.fa-camera-retro
+        a(href=routes.home)
+            i.fa.fa-eye
+    .header__column
+        form(action=routes.search, method="get")
+            input(type="text", placeholder="Search by term", name="term")
     .header__column
         ul
             li
-                a(href="#") Join
+                a(href=routes.join) Join
             li
-                a(href="#") Log in
+                a(href=routes.login) Log in
