--- a/views/partials/footer.pug
+++ b/views/partials/footer.pug
@@ -1,4 +1,4 @@
 footer.footer
     .footer_icon
-        a(href="#toTop", class="fa fa-eye", aria-hidden="true")
+        a(href="#toTop", class="fa fa-youtube", aria-hidden="true")
     span.footer_text NewTube &copy; #{new Date().getFullYear()} 
