--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -1,7 +1,7 @@
 header.header
     .header__column
         a(href=routes.home)
-            i.fa.fa-eye
+            i.fa.fa-youtube
     .header__column
         form(action=routes.search, method="get")
             input(type="text", placeholder="Search by term", name="term")
