post method to join route implemented with redirect to home page

--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -1,7 +1,7 @@
 header.header
     .header__column
         a(href=routes.home)
-            i.fa.fa-youtube
+            i.fa.fa-youtube(style="font-size: 40px; color: #c4202b")
     .header__column
         form(action=routes.search, method="get")
             input(type="text", placeholder="Search by term", name="term")
