--- a/views/join.pug
+++ b/views/join.pug
@@ -3,9 +3,9 @@ extends layouts/main.pug
 block content
     .form__container
         form(action=routes.join, method="post")
-            input(type="text", name="name", placeholder="full name")
-            input(type="email", name="email", placeholder="email")
-            input(type="password", name="password", placeholder="password")
-            input(type="password", name="password2", placeholder="Verify password")
+            input(type="text", name="name", placeholder="full name", required=true)
+            input(type="email", name="email", placeholder="email", required=true)
+            input(type="password", name="password", placeholder="password", required=true)
+            input(type="password", name="password2", placeholder="Verify password", required=true)
             input(type="submit", value="Join Now")
         include partials/socialLogin
